k8s-manifests/overlays/dev/superapp/ecommerce/patch/patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-erp
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: ecommerce-erp
        image: superapp-registry.cbe.com.et:5000/cbe-superapp/ecommerce-erp-dev:latest
        imagePullPolicy: Always
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: ecommerce
        image: superapp-registry.cbe.com.et:5000/cbe-superapp/ecommerce-dev:latest
        imagePullPolicy: Always
