k8s-manifests/overlays/dev/superapp/ecommerce/patch/route-patch.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ecommerce-erp-route

spec:
  path: /
  to:
    name: ecommerce-erp-dev
    weight: 100
    kind: Service
  host: deverpsuperapp.cbe.com.et
  port:
    targetPort: 8069

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ecommerce-route

spec:
  path: /api/v1/cbesuperapp/ecommerce
  to:
    name: ecommerce-dev
    weight: 100
    kind: Service
  host: devapisuperapp.cbe.com.et
  port:
    targetPort: 8080
